# TriEngine

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
TriEngine/content/shaders/: default.frag  default.vert  error.frag  glow.frag
TriEngine/engine/buffers/: ElementBufferObject.h  FrameBufferObject.h  VertexArrayObject.h  VertexBufferObject.h
TriEngine/engine/common/: Delegate.h  EventDispatcher.h
TriEngine/engine/core/: Engine.cpp  Engine.h  GameManager.cpp  GameManager.h  PyCore.cpp  PyCore.h  Window.cpp  Window.h
TriEngine/engine/ecs/components/: ChildrenComponent.cpp  ChildrenComponent.h  ChildrenManager.cpp  ChildrenManager.h  IComponent.h
TriEngine/engine/ecs/entities/: AActorBase.cpp  AActorBase.h  IActor.h
TriEngine/engine/ecs/systems/: Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h
TriEngine/engine/lua/: ALuaEnvComm.cpp  ALuaEnvComm.h  ALuaEnvironment.cpp  ALuaEnvironment.h  ALuaManager.cpp  ALuaManager.h  ALuaScript.cpp  ALuaScript.h  ALuaSignal.cpp  ALuaSignal.h  ALuaState.cpp  ALuaState.h
TriEngine/engine/lua/types/: ALuaBool.h  ALuaClass.h  ALuaInteger.h  ALuaNumber.h  ALuaTable.h
TriEngine/engine/py/: APyInterp.cpp  APyInterp.h  APyManager.cpp  APyManager.h
TriEngine/engine/utility/: Image.cpp  Image.h
TriEngine/lua/: Test.lua
TriEngine/scripts/buffers/: ElementBufferObject.h  FrameBufferObject.h  VertexArrayObject.h
TriEngine/scripts/classes/: Actor.cpp  Actor.h
TriEngine/scripts/classes/components/: ActorComponent.cpp  ActorComponent.h  ActorComponent.hpp  Mesh.cpp  Mesh.h  Mesh.hpp
TriEngine/scripts/core/: Screen.cpp  Screen.h  Screen.hpp
TriEngine/scripts/graphics/: GLRenderer.cpp  GLRenderer.h  ObjectBuffer.cpp  ObjectBuffer.h  Shader.cpp  Shader.h  Shader.hpp
TriEngine/scripts/graphics/textures/: BaseTextureClass.cpp  BaseTextureClass.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h
TriEngine/scripts/util/: File.cpp  File.h  Image.cpp  Image.h  Image.hpp  Time.cpp  Time.h
